====0.0.34 tag  on 2006-08-30 included all of this:===
- Changed gemspec to "wxruby2-preview" version 0.0.34 (Alex Fenton)
- Added Wx::WXRUBY_VERSION and Wx::WXWIDGETS_VERSION (Alex Fenton)
- Added TreeCtrl sample (Alex Fenton)
- Updated TODO, removed completed items, added known errors (Alex Fenton)
- Fixed crasher in caret.rb sample due to deleted method (Alex Fenton)
- Deleted redundant code in Events.i (Alex Fenton)
- Allow bigdemo to be run from other dirs, fix icons and title (Alex Fenton)
- Fixed crashes due to set_sizer ownership (Kevin Smith)
- Remove dangerous and misleading DC#free method (Kevin Smith)
- Fixed crash-on-exit in minimal.rb by changing Dialog superclass (Kevin Smith)
- Added WXRUBY_RELEASE build option (Alex Fenton/Kevin Smith)
- Enabled focus event handlers in bigdemo/wxTextCtrl.rb (Roy Sutton)
- Added default App#on_assert to wx.rb (Kevin Smith)
- Fixes to ControlWithItem, ComboBox;samples in bigdemo.rb (Roy Sutton)
- Add WXRUBY_VERBOSE build environment variable (Kevin Smith)
- Rename DEBUG build environment variable to WXRUBY_DEBUG (Kevin Smith)
- Added task descriptions to rakefiles, so rake --tasks works (Alex Fenton)
- Clean up rakefile SWIG detection to give clearer error messages (Kevin Smith)
- Fix name of Image#find_handler_mime (Roy Sutton)
- Removed duplicate declarations in wxTextCtrl.h & wxListCtrl.h (Roy Sutton)
- Added support for DC#get_text_extent (Kevin Smith)
- Fix GetTextExtent handling by adding directorout typemap (Roy Sutton)
- Fix rakewx.rb SWIG version detection (Robin Stocker)
- Minor gemspec changes (domain, email, spelling) (Kevin Smith)
- Added more wxTextCtrl- and wxTextAttr-related constants (Sean Long)
- Overhauled wxTextCtrl.h to match actual wx API (Sean Long)
- Fixed 'undefined method' error in bigdemo/wxTextCtrl (Kevin Smith)
- Renamed bigdemo from Main.rbw to bigdemo.rb (Kevin Smith)
- Removed strict dependency on redcloth to do main rake compile (Alex Fenton)